Navbar finalizada con estilos y animaciones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--CSS-->
     <link rel="stylesheet" href="css/estilos.css">
+    <!--FONTS-->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -52,17 +54,27 @@
                     <a href="#"><img src="img/escudo.png" width="40" height="40"
                             class="d-inline-block align-top"></a></p>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">INICIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Noticias</a>
+                    <a class="nav-link" href="#">NOTICIAS</a>
+                   <ul class="submenu m-auto">
+                    <li><a href="">NOTICIAS 1</a></li>
+                    <li><a href="">NOTICIAS 2</a></li>
+                    <li><a href="">NOTICIAS 3</a></li>
+                   </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Fútbol</a>
+                    <a class="nav-link" href="#">FÚTBOL</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Fotos</a>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">FOTOS</a>
+                    <ul class="submenu">
+                        <li><a href="">FOTOS 1</a></li>
+                        <li><a href="">FOTOS 2</a></li>
+                        <li><a href="">FOTOS 3</a></li>
+                       </ul>
                 </li>
             </ul>
         </div>
