arreglo navbar y comienzo pagina equipo

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
                 <li class="d-none" id="escudo">
-                    <p class="texto-borde"><strong>ClubSportivo</strong>Avellaneda
-                    <a href="#"><img src="img/escudo.png" width="40" height="40"
-                            class="d-inline-block align-top"></a></p>
+                    <!--<p class="texto-borde"><strong>ClubSportivo</strong>Avellaneda-->
+                    <a href="#"><img src="img/escudo.png" width="35" height="35"
+                            class="d-inline-block align-top"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">INICIO</a>
