--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
           visualizar los cambios en tiempo real, se llama atom-live-server</p>
           <p>no hace falta refrescar el explorador para ver los cambios, solo con guardarlos se los ve</p>
           <p>hola</p>
-          <p>hola</p
+          <p>hola</p>
+          <p>hola</p>
      </body>
 </html>
