Hola sola la pelada magica
Co-Authored-By: null <DavidP-1993@users.noreply.github.com>

--- a/test.html
+++ b/test.html
@@ -13,5 +13,6 @@
           <p>acá en atom encontre una herramienta excelente!! que me permite
           visualizar los cambios en tiempo real, se llama atom-live-server</p>
           <p>no hace falta refrescar el explorador para ver los cambios, solo con guardarlos se los ve</p>
+          <p>hola muchachos</p>
      </body>
 </html>
